wip: attempt fetching the Azure JWKS

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ env_logger = "*"
 alcoholic_jwt = "*"
 lazy_static = "*"
 actix-web-httpauth = "*"
+openidconnect = "*"
+dotenv = "*"
+reqwest = { version = "*", features = ["json"] }
+serde_json = "*"
