--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ actix-web-httpauth = "*"
 alcoholic_jwt = "*"
 dotenv = "*"
 env_logger = "*"
+envy = "*"
 lazy_static = "*"
 log = "*"
 openidconnect = "*"
+serde = { version = "*", features = ["derive"] }
 serde_json = "*"
