feat: OIDC token validation against JWKS (#1)
* chore: debug profile

* wip: bearer token middleware

* wip: attempt fetching the Azure JWKS

* feat: fetch JWKS and cache it

* refactor: use Result map_err to reduce the nesting

* chore: cargo sort && cargo clippy

* feat: actually validate the token against the JWKS

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,13 @@ edition = "2018"
 
 [dependencies]
 actix-web = "*"
-log = "*"
+actix-web-httpauth = "*"
+alcoholic_jwt = "*"
+dotenv = "*"
 env_logger = "*"
+envy = "*"
+lazy_static = "*"
+log = "*"
+openidconnect = "*"
+serde = { version = "*", features = ["derive"] }
+serde_json = "*"
