wip: spawn codehq-ts CLI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 actix-web = "*"
 actix-web-httpauth = "*"
 alcoholic_jwt = "*"
+chrono = "*"
 dotenv = "*"
+duct = "*"
 env_logger = "*"
 envy = "*"
 lazy_static = "*"
