feat: CORS settings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+actix-cors = "*"
 actix-web = "*"
 actix-web-httpauth = "*"
 alcoholic_jwt = "*"
